tests/cases/invalid/if-block-var-uses-let/example.mld
if true [ var @x = 1 ]
